# companion

./: .browserslistrc  .editorconfig  .eslintrc.cjs  .gitignore  .gitmodules  .hintrc  CHANGELOG.md  CONTRIBUTING.md  Entitlements.plist  PKGBUILD  README.md  bun.lockb  env.d.ts  fix-index.sh  index.html  massdesktop.desktop  music_assistant.desktop  musicassistant.desktop  package.json  prettierrc.cjs  privacy-policy.md  public  src  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build.yaml  rust-clippy.yml
public/: __init__.py
resource/: io.music_assistant.companion.metainfo.xml
src-tauri/: Cargo.toml  Entitlements.plist  Tauri.pkgbuild.toml  Tauri.toml  Tauri.toml.old  squeezelite-x86_64-unknown-linux-gnu  tauri.conf.json
src-tauri/binaries/: squeezelite-x86_64-apple-darwin
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: discord_rpc.rs  lib.rs  main.rs
