[package]
name = "music-assistant-companion"
version = "0.0.72"
description = "Music Assistant Companion App"
authors = ["The Music Assistant Team"]
license = "Apache-2.0"
repository = "https://github.com/music-assistant/companion"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc.12", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.15", features = [ "devtools", "tray-icon"] }
tauri-plugin-single-instance = "2.0.0-rc.4"
tauri-plugin-window-state = "2.0.0-rc.5"
discord-rich-presence = "0.2.4"
tungstenite = {version = "0.24.0", features = ["native-tls"] }
url = "2.5.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
gethostname = "0.5.0"
tauri-plugin-shell = "2.0.0-rc.3"
tauri-plugin-process = "2.0.0-rc.1"
time = "0.3.36"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.0.0-rc.3"

[dependencies.openssl]
version = "=0.10.66"
features = ["vendored"]
[dependencies.openssl-sys]
version = "=0.9.103"
features = ["vendored"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
