[package]
name = "music-assistant-companion"
version = "0.0.75"
description = "Music Assistant Companion App"
authors = ["The Music Assistant Team"]
license = "Apache-2.0"
repository = "https://github.com/music-assistant/companion"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [ "devtools", "tray-icon"] }
tauri-plugin-single-instance = "2.2.0"
tauri-plugin-window-state = "2.2.0"
discord-rich-presence = "0.2.5"
tungstenite = {version = "0.26.1", features = ["native-tls"] }
url = "2.5.4"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
gethostname = "0.5.0"
tauri-plugin-shell = "2.2.0"
tauri-plugin-process = "2.2.0"
time = "0.3.37"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.3.0"

[dependencies.openssl]
version = "=0.10.68"
features = ["vendored"]
[dependencies.openssl-sys]
version = "=0.9.104"
features = ["vendored"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
